<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ApprovePeerActivity">

	<TextView
		android:id="@+id/txtHeader"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/approve_peer_header"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/txtRemoteName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:text="TextView"
		android:textSize="30sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txtHeader" />

	<TextView
		android:id="@+id/txtInstructions"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:text="@string/approve_peer_instructions"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txtRemoteAddress" />

	<ImageView
		android:id="@+id/imgThumbprint"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginBottom="8dp"
		android:scaleType="fitCenter"
		app:layout_constraintBottom_toTopOf="@+id/chbIsSame"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txtInstructions"
		tools:srcCompat="@tools:sample/avatars[3]" />

	<CheckBox
		android:id="@+id/chbIsSame"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/approve_peer_are_same"
		app:layout_constraintBottom_toTopOf="@+id/btnAllow"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/btnAllow"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginBottom="8dp"
		android:onClick="onAllowClick"
		android:text="@string/approve_peer_btn_allow"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/btnForbid" />

	<Button
		android:id="@+id/btnForbid"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/approve_peer_btn_forbid"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/btnAllow"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/txtRemoteAddress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:text="TextView"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txtRemoteName" />
</android.support.constraint.ConstraintLayout>
